# content-bot

./: .env.example  .gitignore  README.md  SETUP.md  pyproject.toml
scripts/: setup.sh
src/content_bot/: __init__.py  __main__.py  config.py
src/content_bot/bot/: formatters.py  inline_keyboards.py  keyboards.py  main.py  states.py
src/content_bot/bot/handlers/: buttons.py  callbacks.py  commands.py  content.py  content_plan.py  text.py  voice.py
src/content_bot/services/: channel_reader.py  gdocs.py  git.py  processor.py  session.py  storage.py  transcription.py
vault/.claude/: SKILL-STANDARD.md
vault/.claude/skills/content-planner/: SKILL.md
vault/.claude/skills/content-seeds/: SKILL.md
vault/.claude/skills/content-seeds/references/: humanizer.md  icp.md  icp.template.md  strategy.md  tone-examples.md  tone-examples.template.md  tone-of-voice.md  tone-of-voice.template.md
